# MiniArm_simulator

./: .gitignore  global_var.py  main.py  note.txt  pos.txt  sim1.py  user_gui.py
Arm/: Arm.py
ArmSimulation/: ArmInfo.py  env.ipynb  env.py  test.ipynb
ArmSimulation/6DOF/: CMakeLists.txt  package.xml
ArmSimulation/6DOF/launch/: display.launch  gazebo.launch
ArmSimulation/6DOF/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
ArmSimulation/6DOF/urdf/: 6DOF.csv  6DOF.urdf
ArmSimulation/Joe/: CMakeLists.txt  package.xml
ArmSimulation/Joe/config/: joint_names_Joe.yaml
ArmSimulation/Joe/launch/: display.launch  gazebo.launch
ArmSimulation/Joe/meshes/: base_link.STL  left_link1.STL  left_link2.STL  left_link3.STL  left_link4.STL  left_link5.STL  left_link6.STL  left_link7.STL  right_link1.STL  right_link2.STL  right_link3.STL  right_link4.STL  right_link5.STL  right_link6.STL  right_link7.STL
ArmSimulation/Joe/urdf/: Joe.csv  Joe.urdf
ArmSimulation/Joe_URDF/robot244/: CMakeLists.txt  package.xml
ArmSimulation/Joe_URDF/robot244/launch/: display.launch  (+1 more)
ArmSimulation/Joe_URDF/robot_2arm/: CMakeLists.txt  package.xml
ArmSimulation/Joe_URDF/robot_2arm_rsp/: CMakeLists.txt  package.xml
mini_arm_URDF_V14/: CMakeLists.txt  package.xml
mini_arm_URDF_V14/launch/: display.launch  gazebo.launch
mini_arm_URDF_V14/meshes/: base_link.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  llink7.STL
mini_arm_URDF_V14/urdf/: mini_arm_URDF_V14.csv  mini_arm_URDF_V14.urdf
notebooks/: automatic_model_training.ipynb
(+27 files in other folders)
